--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Showcase Template",
-  "short_name": "Showcase Template",
+  "name": "Visual Computing 2023 I",
+  "short_name": "Visual Computing 2023 I",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
